# skynav

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml
.github/workflows/: ci.yml  server.yml
app/: Cargo.toml  index.html
app/src/: app.rs  gfx.rs  lib.rs  main.rs  ui.rs  util.rs
app/src/gfx/: camera.rs  globe.rs  globe.wgsl  sky.rs  sky.wgsl
app/src/ui/: cache.rs  observed.rs  overlay.rs  selection.rs  tabs.rs  widgets.rs
app/src/ui/widgets/: bodies_panel.rs  checklist_panel.rs  events_panel.rs  globe_view.rs  info_panel.rs  observer_panel.rs  panel_ui.rs  scrubber.rs  sky_view.rs  system_view.rs  time_panel.rs  view_panel.rs  visible_panel.rs
core/: Cargo.toml
core/src/: body.rs  catalog.rs  constellations.rs  earth.rs  ephemeris.rs  events.rs  frames.rs  lib.rs  math.rs  observer.rs  places.rs  rotation.rs  simulation.rs  sky.rs  time.rs  view.rs
docker/: .env.dist  Dockerfile  Dockerfile.dev  docker-compose.yml
parse/: Cargo.toml
parse/src/: main.rs
server/: Cargo.toml
server/src/: config.rs  error.rs  main.rs  state.rs
