[package]
name = "skynav-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum = "0.8.9"
thiserror = { workspace = true }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.11", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
